tests/compile-fail/closure_self_capture_nested.si
// Test that nested closure self-capture is detected
// Spec: 15-memory-model.md ยง Compile-Time Cycle Prevention
// Design: 04-memory-management/02-arc.md ยง Cycle Detection
//
// Self-capture through nested expressions is still a cycle.

#[compile_fail("closure cannot capture itself")]
@test_self_capture_nested () -> void = run(
    let f = () -> if true then f else f,
    ()
)
